--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,10 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/bus_tracking_db
 
 
-db.username=dbadmin
+db.username=root
 
 
-db.password=Tracking@123
+db.password=root
+
+
 
