--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ login.roles-query=select username,role from tbl_user where username=?
 properties
 db.driver=com.mysql.jdbc.Driver
 
-db.url=jdbc:mysql://localhost:3306/bus_tracking_db
+db.url=jdbc:mysql://192.168.1.140:3306/bus_tracking_db
 
 
 db.username=root
