committed in bus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,11 @@ login.roles-query=select username,role from tbl_user where username=?
 
 db.driver=com.mysql.jdbc.Driver
 
-db.url=jdbc:mysql://192.168.1.140:3306/bus_tracking_db
+db.url=jdbc:mysql://208.109.87.191:3306/bustrackdb
 
 
-db.username=root
+db.username=bustrackdb_user
 
-db.password=root
-
+db.password=bustrackdb@#123
 
 
