--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,16 @@
 		</dependency>
 
 
-
+ <dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.6</version>
+		</dependency>
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.3.1</version>
+		</dependency>
 
 
 
