Holidays Form validation and Email validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ login.roles-query=select username,role from tbl_user where username=?
 
 db.driver=com.mysql.jdbc.Driver
 
-db.url=jdbc:mysql://208.109.87.191:3306/bustrackdb
+db.url=jdbc:mysql://localhost:3306/bus_tracking_db
 
 
-db.username=bustrackdb_user
+db.username=root
 
-db.password=bustrackdb@#123
+db.password=root
 
 
