--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/bus_tracking_db
 
 
-db.username=root
+db.username=bustrackuser
 
-db.password=root
+db.password=bustrackuser@#123
 
 
